[spherification] update the splits UGC header

--- a/app/views/courses/_spherification_d.html.haml
+++ b/app/views/courses/_spherification_d.html.haml
@@ -20,17 +20,16 @@
 
     .span6.well
       = render 'course_enrollment_box'
-    - if @course.users.count > 1 && @course.uploads.approved.count > 3
-      %h4= "Current enrollment: #{@course.users.count}"
-      %h4 Here are some things students have accomplished so far:
-      .horizontal-slider{data: {direction: 'right'}}
-        .horizontal-slider-wrap
-          - @course.uploads.includes(:user).approved.order('created_at DESC').each do |upload|
-            = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
-        %div{class: "horizontal-slider-btn-right btn btn-circle"}
-          %i{class: "icon-chevron-right"}
-        %div{class: "horizontal-slider-shadow-overlay-right"}
-
+      .section
+        %h4= "Current enrollment: #{@course.users.count}"
+        %h3 Some user creations:
+        .horizontal-slider{data: {direction: 'right'}}
+          .horizontal-slider-wrap
+            - @course.uploads.includes(:user).approved.order('created_at DESC').each do |upload|
+              = render 'shared/media_box', size: 'medium', url: user_upload_path(upload.user, upload), title: upload.recipe_name, image: upload.image_id
+          %div{class: "horizontal-slider-btn-right btn btn-circle"}
+            %i{class: "icon-chevron-right"}
+          %div{class: "horizontal-slider-shadow-overlay-right"}
 
 
 #creative-kit.modal.hide.fade
