--- a/app/views/courses/_spherification_c.html.haml
+++ b/app/views/courses/_spherification_c.html.haml
@@ -19,7 +19,7 @@
       - if @course.users.count > 1 && @course.uploads.approved.count > 3
         .well   
           %h4= "Current enrollment: #{@course.users.count}"
-          %h4 Here are some things students have accomplished so far:
+          %h3 Some user creations:
           .horizontal-slider{data: {direction: 'right'}}
             .horizontal-slider-wrap
               - @course.uploads.includes(:user).approved.order('created_at DESC').each do |upload|
