--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -81,9 +81,10 @@
                 %i.icon-print
             -if admin_user_signed_in? && @include_edit_toolbar
               .pull-right(style="margin-left: 20px;")
-                %button#edit-mode.btn.btn-primary(type='button' ng-click="startEditMode()" tooltip="Edit this recipe")
+
+                %button#edit-mode.btn.btn-primary(type='button' ng-click="startEditMode()" tooltip="Edit this recipe" tooltip-placement="left")
                   Edit
-                %button#edit-mode.btn.btn-primary(type='button' ng-click="fork()" tooltip="Make a copy of this recipe")
+                %button#edit-mode.btn.btn-primary(type='button' ng-click="fork()" tooltip="Edit a copy of this recipe" tooltip-placement="left")
                   Fork
 
             .pull-right.display-inline-fix
