--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -46,16 +46,16 @@
         .gallery-filter
           .dropdown
             = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
-              Date
+              {{date_type || 'Date'}}
               %i.icon-angle-down
             %ul.dropdown-menu
-              %li(ng-click="date = '-updated_at'")
+              %li(ng-click="date = '-updated_at' ; date_type = 'Most Recent'")
                 = link_to 'Most Recent', 'javascript:void(0);'
-              %li(ng-click="date = 'updated_at'")
+              %li(ng-click="date = 'updated_at' ; date_type = 'Oldest'")
                 = link_to 'Oldest', 'javascript:void(0);'
           .dropdown
             = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
-              Difficulty
+              {{filters.difficulty || 'Difficulty'}}
               %i.icon-angle-down
             %ul.dropdown-menu
               %li(ng-click="filters.difficulty = 'easy'")
@@ -65,10 +65,10 @@
               %li(ng-click="filters.difficulty = 'advanced'")
                 = link_to 'Advanced', 'javascript:void(0);'
           .dropdown
-            %div(ng-click="filters = {}")
+            %div(ng-show="filters.difficulty || date_type" ng-click="filters = {} ; date_type = null; date = '-updated_at'")
               = link_to 'Clear x', 'javascript:void(0);'
         %div
-          .media-box-3(ng-cloak='' ng-repeat='activity in activities | filter:search | filter:filters | orderBy:date')
+          .media-box-3(ng-cloak='' ng-repeat='activity in activities | filter:search | filter:filters | orderBy:date' ng-animate="'gallery-animation'")
             %a(href= 'activities/{{activity.slug}}')
               .media-box-3-title
                 {{activity.title}}
