--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -49,9 +49,9 @@
               {{date_type || 'Date'}}
               %i.icon-angle-down
             %ul.dropdown-menu
-              %li(ng-click="date = '-updated_at' ; date_type = 'Most Recent'")
+              %li(ng-click="date = '-published_at' ; date_type = 'Most Recent'")
                 = link_to 'Most Recent', 'javascript:void(0);'
-              %li(ng-click="date = 'updated_at' ; date_type = 'Oldest'")
+              %li(ng-click="date = 'published_at' ; date_type = 'Oldest'")
                 = link_to 'Oldest', 'javascript:void(0);'
           .dropdown
             = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
