--- a/app/views/client_views/_equipment_edit_pair.html.haml
+++ b/app/views/client_views/_equipment_edit_pair.html.haml
@@ -10,7 +10,10 @@
         {{item.equipment.title || item.equipment}}&nbsp;
 
   %csEditPairEdit
-    .action-button-group(ng-show="focusedInside()")
-      %i.drag-handle.icon-sort(tooltip="Drag to reorder")
-      %i.remove-button.icon-remove(ng-click="removeItem()" tooltip="Remove equipment")
-    %input(csselectonfocus="" csinputmonkeyequipment="" type="text" placeholder="New equipment" typeahead-editable="true" autocomplete="off" class="equipment-typeahead" ng-model="item.equipment" typeahead="e as e.title for e in all_equipment($viewValue)")
+    .btn-toolbar.action-button-group(ng-show="focusedInside()")
+      .btn-group
+        .btn.drag-handle.btn-small.btn-secondary(tooltip="Drag to reorder")
+          %i.icon-sort
+        .btn.remove-button.btn-small.btn-secondary(tooltip="Drag to reorder" tooltip="Remove equipment item" ng-click="removeItem()")
+          %i.icon-remove
+    %input(csselectonfocus="" csinputmonkeyequipment="" type="text" placeholder="New equipment item" typeahead-editable="true" autocomplete="off" class="equipment-typeahead" ng-model="item.equipment" typeahead="e as e.title for e in all_equipment($viewValue)")
