--- a/app/views/client_views/_ingredient_edit_pair.html.haml
+++ b/app/views/client_views/_ingredient_edit_pair.html.haml
@@ -17,9 +17,12 @@
     .unit.qtyfade(ng-bind="ai.unit")
 
   %csEditPairEdit
-    .action-button-group(ng-show="focusedInside()")
-      %i.drag-handle.icon-sort(tooltip="Drag to reorder")
-      %i.remove-button.icon-remove(tooltip="Remove ingredient" ng-click="removeIngredient($index)")
+    .btn-toolbar.action-button-group(ng-show="focusedInside()")
+      .btn-group
+        .btn.drag-handle.btn-small.btn-secondary(tooltip="Drag to reorder")
+          %i.icon-sort
+        .btn.remove-button.btn-small.btn-secondary(tooltip="Drag to reorder" tooltip="Remove ingredient" ng-click="removeIngredient($index)")
+          %i.icon-remove
     .ingredient-title
       %input(csselectonfocus="" csinputmonkeyingredient="" type="text" placeholder="New ingredient" typeahead-editable="true" autocomplete="off" class="ingredient-typeahead" ng-model="ai.ingredient" typeahead="i as i.title for i in all_ingredients($viewValue)")
       %input(csselectonfocus="" type="text" placeholder="note" autocomplete="off" ng-model="ai.note")
