[gallery] dry up gallery controller

--- a/app/views/sciences/index.html.haml
+++ b/app/views/sciences/index.html.haml
@@ -13,7 +13,7 @@
 .container
   .row
     .span12
-      %div(ng-controller='SciencesController')
+      %div(ng-controller='GalleryController')
         %h1
         / .flat-form
         /   %form
