--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -1,4 +1,4 @@
-.gallery-filter(ng-cloak='' )
+.gallery-filter(ng-cloak='')
   .dropdown
     = link_to 'javascript:void(0);', class: 'dropdown-toggle' do
       {{date_type || 'Date'}}
@@ -22,7 +22,7 @@
   .dropdown
     %div(ng-show="filters.difficulty || date_type" ng-click="filters = {} ; date_type = null; date = '-updated_at'")
       = link_to 'Clear x', 'javascript:void(0);'
-%div
+%div.pull-left(galleryscroll)
   .media-box-3(ng-cloak='' ng-repeat='activity in activities | filter:search | filter:filters | orderBy:date' ng-animate="'gallery-animation'")
     %a(href= 'activities/{{activity.slug}}')
       .media-box-3-title
