--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -37,9 +37,8 @@
 
 .container
   .row
-    .span12
+    .span12#gallery-count{:'gallery-count' => "#{@recipes_count}"}
       %div(ng-controller='GalleryController')
-        %h1
         / .flat-form
         /   %form
         /     %input(ng-model='search' placeholder='Enter Name')
