--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -4,11 +4,13 @@
     .ingredient-table-head
       .ingredient-table-row
         #ingredient.ingredient-title Ingredient
-        #quantity.quantity-group(tooltip="Click on quantity column header to change units, or any value to scale the recipe.")
+        #quantity.quantity-group(ng-hide="editMode" tooltip="Click on quantity column header to change units, or any value to scale the recipe.")
           %a.change_units Quantity
           %i.fakelink.icon-question-sign
+        .quantity-group(ng-show="editMode")
+          Quantity
 
   .ingredient-table-body(ui-sortable="sortOptions" ng-model="#{source}.ingredients")
-    .ingredient-table-row(ng-repeat="ai in #{source}.ingredients" data-ng-animate="'custom'")
+    .ingredient-table-row(ng-repeat="ai in #{source}.ingredients" ng-animate="'custom'")
       %csIngredientEditPair
 
