--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -19,6 +19,17 @@
     %csEditPairEdit
       %textarea(ng-model="activity.description" rows="5" placeholder="Add description...")
 
+  -if admin_user_signed_in?
+    .section
+      %csEditPair
+        %csEditPairShow
+          %div(ng-show="!!activity.author_notes  || editMode" ng-class="disableIf(! activity.author_notes)")
+            %h4 Private Notes
+            %span(ng-bind="activity.author_notes || 'Add private notes...' ")
+        %csEditPairEdit
+          %h4 Private Notes
+          %textarea(ng-model="activity.author_notes" placeholder="Add private notes..." rows="3")
+
   .section.csmonitorinputactivity
     .activity-ingredients-list#full-ingredients-list.section
       .well(ng-show="activity.ingredients.length" )
