--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
     - unless yield(:ajax_seo).blank?
       = yield :ajax_seo
     / YouTube Iframe API can't be loaded async so we have to load it directly
-    %script{src:'http://www.youtube.com/iframe_api'}
+
     = auto_discovery_link_tag :atom, feed_path
     = auto_discovery_link_tag :rss, feed_path
     %link{href: "/favicon.ico", rel: "shortcut icon"}
@@ -46,6 +46,8 @@
     = yield :popup_bottom
 
     = yield :footer
+    %script{src:'http://www.youtube.com/iframe_api'}
+    %script{src:'/assets/youtube'}
   / = render 'layouts/youtube'
   
   %script{src: "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"}
