--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -46,4 +46,13 @@
 
 .gallery-animation-move-setup.gallery-animation-move-start
   opacity: 1
+
+.gallery-spinner
+  position: fixed
+  left: 50%
+  top: 50%
+  margin-left: -24px
+  margin-top: -50px
+  color: $orange
+  font-size: 40px
   
