--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -31,3 +31,5 @@
       .media-box-3-footer
         .footer-left
           {{activity.difficulty}}
+.gallery-spinner(ng-show='spinner')
+  %i.icon-spinner.icon-spin.icon-large
