[activity] no steps

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -233,6 +233,13 @@ h4
 
 ////////////////////////////////////////
 
+/* No Step Activities */
+.no-steps
+  .activity-description
+    height: inherit
+  #activity-description-maximize
+    display: none
+
 /* Media Objects */
 
 .text-orange
