[activity] no steps

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -235,6 +235,9 @@ h4
 
 /* No Step Activities */
 .no-steps
+  .hero-visual
+    img
+      width: 100%
   .activity-description
     height: inherit
   #activity-description-maximize
