--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -1,4 +1,4 @@
-.span6.section.ng-cloak#video-ingredient-unit{class: "#{activity.steps.any? ? nil : 'no-steps'}"}
+.section.ng-cloak#video-ingredient-unit{class: "#{activity.steps.any? ? 'span6' : 'no-steps span8 offset2'}"}
 
   %div(collapse="! (editMode && editMeta)")
     = render 'metadata'
