--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -46,7 +46,7 @@
 
     .row.printable
 
-      .span6.relative.ng-cloak
+      .relative.ng-cloak{class: "#{@activity.steps.any? ? 'span6' : 'span8 offset2'}"}
         %csEditPair#title-edit-pair
           %csEditPairShow
             %h1.activity-title(ng-bind-html-unsafe="activity.title || (editMode && 'Add title...')" itemprop='name' ng-class="disableIf(! activity.title.length)")
@@ -61,7 +61,7 @@
                 %select.unit(type="text" ng-model="activity.source_type" required="true" ng-options="s.id as s.name for s in sourceActivityTypes")
                 = link_to @activity.source_activity.title, activity_path(@activity.source_activity)
 
-      .span6.noprint.ng-cloak
+      .noprint.ng-cloak{class: "#{@activity.steps.any? ? 'span6' : 'no-steps span8 offset2'}"}
 
         %div(collapse="editMode")
           - if ! @minimal
