drag and drop for imagse

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1371,6 +1371,7 @@ csingredienteditpair
   position: absolute
   left:  -16px
   height:  100%
+
   button
     width: 24px
     margin-left: 0px !important
@@ -1382,6 +1383,7 @@ csingredienteditpair
     margin-left: 0px !important
 
 .step-edit-buttons
+  position: absolute
   top: 45px
   width: 30px
 
@@ -1409,6 +1411,24 @@ csingredienteditpair
 
 .unselected-ingredient
   color: #a9a9a9
+
+.csfilepicker
+  .btn-toolbar
+    margin-top: 0px
+
+  .drop-target
+    width: 60px
+
+    .upload-progress
+      width: 60px
+      position:  absolute
+      left:  0
+      right:  0
+      bottom:  -22px
+
+    .progress
+      width: 100%
+      height:  10px
 
 // See https://github.com/angular/angular.js/commit/11f712bc - these class
 // names have to change when we go to angular >= 1.1.5
