[end action] setup

--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -108,6 +108,15 @@
     top: 10px
     right: 10px
 
+/* Course End Action */
+.course-end-action
+  background: blue
+  position: absolute
+  width: 100%
+  top: 0px
+  bottom: 0px
+  z-index: 9999
+
 /* Spherification Styles */
 
 .static-height
