--- a/app/views/courses/_spherification_f.html.haml
+++ b/app/views/courses/_spherification_f.html.haml
@@ -51,6 +51,81 @@
       .text-center
         %h4 Direct Spherification
 
+.container
+  .row.section
+    .span12.text-center
+      %h2
+        Buy a kit to help you get started
+
+.container#creative
+  .row.section
+    .span6
+      / = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
+      .annotated.annotated-creative
+        = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
+        .annotations
+          - Course::SPHERIFICATION_CREATIVE[:equipment].each do |equipment|
+            .annotation
+              = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
+      /.row-fluid
+      /  .span6
+      /    = image_tag 'https://www.filepicker./io/api/file/Mn5unIy2TSGXjBRiRsnj'
+      /  .span6
+      /    = image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA'
+    .span5.offset1.lead
+      %h2 The Creative Kit
+      = Course::SPHERIFICATION_CREATIVE[:copy]
+      .well.section
+        = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
+
+
+%hr
+.container#enthusiast
+  .row.section
+    .span6
+      / = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
+      .annotated.annotated-enthusiast
+        = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
+        .annotations
+          - Course::SPHERIFICATION_ENTHUSIAST[:equipment].each do |equipment|
+            .annotation
+              = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
+      /.row-fluid
+      /  .span6
+      /    = image_tag 'https://www.filepicker./io/api/file/10jMQrfrTYazji1Sc4XA'
+      /  .span6
+      /    = image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
+    .span5.offset1.lead
+      %h2 The Enthusiast Kit
+      = Course::SPHERIFICATION_ENTHUSIAST[:copy]
+      .well.section
+        = buy_now(Course::SPHERIFICATION_ENTHUSIAST[:variant_id], Course::SPHERIFICATION_ENTHUSIAST[:price])
+
+%hr
+.container#professional
+  .row.section
+    .span6
+      /= image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
+      .annotated.annotated-professional
+        = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
+        .annotations
+          - Course::SPHERIFICATION_PROFESSIONAL[:equipment].each do |equipment|
+            .annotation
+              = equipment
+      .btn.btn-secondary.annotation-toggle.section.hide View Details
+      /.row-fluid
+      /  .span6
+      /    = image_tag 'https://www.filepicker./io/api/file/FBnDnqcUQRetfBswxNzq'
+      /  .span6
+      /    = image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
+    .span5.offset1.lead
+      %h2 The Professional Kit
+      = Course::SPHERIFICATION_PROFESSIONAL[:copy]
+      .well.section
+        = buy_now(Course::SPHERIFICATION_PROFESSIONAL[:variant_id], Course::SPHERIFICATION_PROFESSIONAL[:price])
+
 - if bio_chris && bio_grant
   .container
     .row.section
@@ -72,12 +147,10 @@
   .row.section
     = render 'layouts/disqus_comments', disqus_id: "course-#{course.id}", disqus_title:course.title, disqus_url: course_url
 
-
 .course-end-action
-  %hr
-
+  .container
     .row.section
-      .span8.offset2
+      .span12.text-center
         %h2
           Buy a kit to help you get started
 
