[end action] course end action for spherification

--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -110,7 +110,7 @@
 
 /* Course End Action */
 .course-end-action
-  background: blue
+  background: white
   position: absolute
   width: 100%
   top: 100%
@@ -120,6 +120,14 @@
   z-index: 9999
   opacity: 0
   @include transition(2s linear all)
+  .course-end-action-close
+    position: absolute
+    top: 30px
+    right: 30px
+    font-size: 30px
+    color: $orange
+    &:hover
+      cursor: pointer
 
 .course-end-action-show
   top: 0px
