--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,7 +47,7 @@
 
     = yield :footer
     %script{src:'http://www.youtube.com/iframe_api'}
-    %script{src:'/assets/youtube'}
+    %script{src:'/assets/youtube.js'}
   / = render 'layouts/youtube'
   
   %script{src: "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"}
