--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -56,10 +56,9 @@
       %li(ng-click="filters.difficulty = 'advanced'")
         = link_to 'Advanced', 'javascript:void(0);'
   .dropdown
-    %div(ng-show="filters.difficulty || date_type" ng-click="filters = {} ; date_type = null; date = '-updated_at'")
+    %div(ng-show="filters.difficulty || filters.by_published_at" ng-click="filters.clear = 'true'")
       = link_to 'Clear x', 'javascript:void(0);'
 %div.pull-left(galleryscroll='load_data()')
-  / .media-box-3(ng-cloak='' ng-repeat='activity in filtered = (activities | filter:search | filter:filters | orderBy:date)' ng-animate="'gallery-animation'")
   .media-box-3(ng-cloak='' ng-repeat='activity in activities' ng-animate="'gallery-animation'")
     %a(href= 'activities/{{activity.slug}}')
       .media-box-3-title
