[footer] update the footer with RSS Feed, minor UI tweaks

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -155,6 +155,8 @@
                     %ul
                       %li Ask questions of some of the world's best chefs
                       %li Keep up to date with our latest recipes
+                      %li Enroll in courses, upload your creations
+                      %li Like other student creations
                   .popup-bottom-close
                     %i.icon-remove
 
