--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,3 +1,5 @@
+-################################ HEADER / LAYOUT STUFF ################################
+
 = render 'layouts/filepicker'
 - content_for :title, @activity.title.html_safe
 - content_for :description, @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe
@@ -27,9 +29,9 @@
       %meta{property: 'twitter:player:width', content: '480'}
     - else
       %meta{property: 'twitter:card', content: 'summary_large_image'}
-- @body_tag_attributes = {:'ng-app' => "ChefStepsApp", :'ng-controller' => "ActivityController"}
+- @body_tag_attributes = {:'ng-app' => "ChefStepsApp", :'ng-controller' => "ActivityController", :'ng-click' => "bodyClick()"}
 
--# This is how the crawler knows to request the _escaped_fragment_ page
+-# This is how search engine crawlers know to request the _escaped_fragment_ page
 - content_for :ajax_seo do
   %meta{name: "fragment", content: "!"}
 
@@ -37,11 +39,8 @@
   :javascript
     paramScaling = #{params[:scaling]};
 
--#----------------------------------------------------------------------------------------
--#
--# PRIMARY CONTENT
--#
--#----------------------------------------------------------------------------------------
+
+-################################ PRIMARY CONTENT ################################
 
 %form(name="activityForm")
   -# dummy default button so no way a default click on some other button happens when return is pressed in a text field
@@ -65,6 +64,8 @@
         .row#main-content
           = render 'main_activity_content', activity: @activity
 
+-################################ BOTTOM OF PAGE CONTENT ################################
+
 - content_for :bottom do
   - if ! @minimal
 
@@ -85,6 +86,8 @@
           .section
             - disqus_id = "activity-#{@activity.id}"
             = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
+
+-################################ MODALS  ################################
 
 - if @course
   .modal.hide.fade#syllabus-modal
@@ -120,6 +123,8 @@
                     %i.icon-remove
 
 = render 'cancel_edit_modal'
+
+-################################ PRELOADED JSON FOR SPEED ################################
 
 #preloaded-activity-json.hide
   = @activity.to_json
