--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -8,128 +8,10 @@
   = render 'basic_edit_pair', model: "activity.timing", name: "Timing", add_text: "Add timing info..."
   = render 'new_equipment_list', model: "activity.equipment", name: "Equipment and Materials", test_method: "hasRequiredEquipment", required_string: "required", required: true
   = render 'new_equipment_list', model: "activity.equipment", name: "Optional Equipment and Materials", test_method: "hasOptionalEquipment", required_string: "optional", required: false
-
-  - if activity.used_in_activities.published.any?
-    .section(ng-hide="editMode")
-      %h4 Used In
-      %ul.no-bullet
-        - activity.used_in_activities.published.each do |activity|
-          %li= link_to activity.title.html_safe, activity
-
-  - if activity.published_variations.any?
-    .section(ng-hide="editMode")
-      %h4 Variations
-      %ul.no-bullet
-        - activity.published_variations.each do |activity|
-          %li= link_to activity.title.html_safe, activity
+  = render 'activity_relationships', activity: activity
 
 .span6.ng-cloak(ng-controller="StepsController")
-  .section.scroll-shadow-wrapper
-    %div.disabled-section
-      -# display:none is a hack to keep from fading out at start. has to be inline style.
-      %h4(style="display: none;" ng-show="editMode && (activity.steps.length == 0)" data-ng-animate="'fade'" ng-click="addStepAtIndex(0)")
-        Add first step...
-    .ordered-steps.scroll-shadow(ng-show="activity.steps.length > 0"){:itemprop => "recipeInstructions"}
-      .scroll-shadow-content.pull-left
-
-        .ordered-step-item.relative(ng-repeat="step in activity.steps" id="{{'order-step-item-' + ($index + 1)}}" ng-controller="StepController" data-ng-animate="'custom'" csstephovered="" ng-mouseenter="setMouseOverStep(true)" ng-mouseleave="setMouseOverStep(false)")
-          .step-sidebar-group(ng-show="editMode && mouseCurrentlyOverStep" data-ng-animate="'fade'" style="display: none;"  )
-            .step-add-button-group(xtooltip="Add step..." tooltip-placement="left")
-              .step-add-button-line
-              %button.btn-secondary(type="button" ng-click="addStepAtIndex($index)")
-                %i.icon-plus
-            .btn-toolbar.step-edit-buttons
-              .btn-group.btn-group-vertical
-                %button.btn.btn-secondary(ng-show="! step.hide_number" type="button" btn-checkbox="" ng-model="step.hide_number" tooltip="Hide step number" tooltip-placement="left")
-                  %i.icon-ban-circle
-                %button.btn.btn-secondary(ng-show="step.hide_number" type="button" btn-checkbox="" ng-model="step.hide_number" tooltip="Show step number" tooltip-placement="left")
-                  \#
-                %button.btn.btn-secondary(ng-click="reorderStep($index, -1)" ng-class="disableIf($first)" tooltip="Move step up" tooltip-placement="left")
-                  %i.icon-arrow-up
-                %button.btn.btn-secondary(ng-click="reorderStep($index, 1)" ng-class="disableIf($last)" tooltip="Move step down" tooltip-placement="left")
-                  %i.icon-arrow-down
-                %button.btn.btn-secondary(type="button" ng-click="removeStep($index)" tooltip="Remove step" tooltip-placement="left")
-                  %i.icon-remove-sign
-            .step-add-button-end-group(ng-show="$last" data-ng-animate="'fade'"  xtooltip="Add step..." tooltip-placement="left")
-              .step-add-button-line
-              %button.btn-secondary(type="button" ng-click="addStepAtIndex($index+1)")
-                %i.icon-plus
-
-
-          .step-element.step-number
-            %div(collapse="step.hide_number" ng-bind="stepNumber($index)")
-
-          .step-element.step-content
-
-            %csEditPair
-              %csEditPairShow
-                %h4(ng-show="step.title || editMode" ng-bind-html-unsafe="step.title || (editMode && 'Optional title...')" ng-class="disableIf(! step.title.length)")
-              %csEditPairEdit
-                %input.nohtml.step-title-input(type="text" ng-model="step.title" placeholder="Optional title...")
-
-            %div.csmonitorinputactivity.ng-form(ng-controller="IngredientsController"  name="ingredientform")
-              .step-ingredients-source.well(ng-hide="(step.ingredients.length == 0) || (editMode && masterSelect)")
-                = render 'ingredients_list', source: "step"
-              .select-from-master.well(ng-hide="! (editMode && masterSelect)")
-                = render 'select_ingredients_from_master'
-              .nav(ng-show="editMode")
-                %h4(ng-show="! step.ingredients.length" ng-class="disableIf(!step.ingredients.length)") Ingredients
-
-                %button.btn.btn-small.btn-secondary.add-from-master(ng-show="!masterSelect" ng-click="toggleSelectFromMaster()" tooltip="Quick add from main ingredient list..." tooltip-placement="bottom")
-                  %i.icon-magic
-                %button.btn.btn-small.btn-primary.done(ng-show="masterSelect" ng-click="toggleSelectFromMaster()" tooltip="Finish adding ingredients" tooltip-placement="bottom")
-                  Done
-                %button.btn.btn-small.btn-secondary.btn-basic.add-item(ng-click="addIngredient($index)" ng-show="!masterSelect" tooltip="Add ingredient..." tooltip-placement="bottom")
-                  %i.icon-plus
-                %button.btn.btn-small.btn-primary.done(ng-show="hasActiveInputs" tooltip="Finish adding ingredients" tooltip-placement="bottom")
-                  Done
-
-            %csEditPair
-              %csEditPairShow
-                %div(ng-show="step.directions || editMode" ng-bind-html-unsafe="(step.directions || 'Add direction...') | markdown | shortcode" ng-class="disableIf(!step.directions)")
-              %csEditPairEdit
-                %textarea(ng-model="step.directions" rows="5" placeholder="Add direction...")
-
-            %div(ng-show="! editMode")
-              .step-actions.btn-group
-                .btn.step-action-item.step-image-btn.btn-primary(ng-show="step.image_id")
-                  %i.icon-picture
-                .btn.step-action-item.step-video-btn.btn-primary(ng-show="step.youtube_id")
-                  %i.icon-facetime-video
-
-              .step-video-outer(ng-show="!! step.youtube_id")
-                .step-video(id="{{'step-video-' + $index}}")
-                  .video-container(csenforceaspect)
-                    %iframe(ng-src="{{'http://www.youtube.com/embed/' + step.youtube_id + '?wmode=opaque&rel=0&modestbranding=1&showinfo=0&vq=hd720'}}")
-
-              .step-image-outer(ng-show="!! step.image_id")
-                .step-image(id="{{'step-image-' + $index}}")
-                  %img(ng-src="{{stepImageURL(step, 480)}}" alt="{{stepImageDescription(step)}}" title="{{stepImageDescription(step)}}" itemprop="image")
-
-
-            .section.clearfix(ng-show="editMode")
-              .span2(ng-show="!! step.youtube_id" )
-                .video-container(csenforceaspect)
-                  %iframe(ng-src="{{'http://www.youtube.com/embed/' + step.youtube_id + '?wmode=opaque&rel=0&modestbranding=1&showinfo=0&vq=small'}}")
-              .span2(ng-show="!! step.image_id")
-                %img(ng-src="{{stepImageURL(step, 240)}}")
-
-            .section.clearfix(ng-show="editMode")
-              .btn.btn-secondary(ng-click="showMediaEdit = ! showMediaEdit")
-                %i.icon-edit
-                Media
-                %i.icon-chevron-up(ng-show="showMediaEdit")
-                %i.icon-chevron-down(ng-show="! showMediaEdit")
-              %div(collapse="! showMediaEdit")
-                .well
-                  %h4 Video
-                  %input.nohtml(type="text" ng-model="step.youtube_id" placeholder="Youtube ID" style="width: 100%;")
-                  %h4 Image
-                  .csfilepicker(ng-model="step.image_id")
-                  %input.nohtml(ng-show="!!step.image_id" type="text" ng-model="step.image_description" placeholder="Image description" style="width: 100%;")
-
-      .scroll-overlay-top
-      .scroll-overlay-bottom
+  = render 'steps'
 
 -# Turn this on if you want to see the whole data structure for debugging
   .row
