--- a/app/views/activities/_steps.html.haml
+++ b/app/views/activities/_steps.html.haml
@@ -7,7 +7,7 @@
 
   .ordered-steps.scroll-shadow(ng-show="activity.steps.length > 0"){:itemprop => "recipeInstructions"}
     .scroll-shadow-content.pull-left
-      .ordered-step-item.relative(ng-repeat="step in activity.steps" id="{{'order-step-item-' + ($index + 1)}}" ng-controller="StepController" data-ng-animate="'custom'" csstephovered="" ng-mouseenter="setMouseOverStep(true)" ng-mouseleave="setMouseOverStep(false)")
+      .ordered-step-item.relative(ng-repeat="step in activity.steps" id="{{'order-step-item-' + ($index + 1)}}" ng-controller="StepController" data-ng-animate="'custom'" csstephovered="" ng-mouseenter="setMouseOverStep()")
         = render 'step'
 
     .scroll-overlay-top
