[mixpanel] track enrollments

--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -17,4 +17,4 @@
     = render 'spherification_f'
 
 :javascript
-  mixpanel.track('course viewed', {'course title' : document.title, 'url' : window.location.pathname});
+  mixpanel.track('Course Viewed', {'course title' : document.title, 'url' : window.location.pathname});
