[mixpanel] free data points

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -40,6 +40,9 @@
               %p.creative-commons
                 %a{ href: 'http://creativecommons.org/licenses/by-nc-sa/3.0', target: '_blank' }
                   = image_tag 'by-nc-sa.png'
+              %p
+                %a{href: 'https://mixpanel.com/f/partner'}
+                  %img{src: '//cdn.mxpnl.com/site_media/images/partner/badge_blue.png', alt: 'Mobile Analytics'}
 
             .span12
               .section.text-center 
